[gd_scene load_steps=4 format=3 uid="uid://gnpe0hveo1mn"]

[ext_resource type="Script" path="res://scripts/buy_menu.gd" id="1_b2fvg"]
[ext_resource type="AudioStream" uid="uid://dj4f276ui5d0u" path="res://assets/Cash Register (Kaching) - Sound Effect (HD).mp3" id="2_r7l2m"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3jxc5"]
bg_color = Color(0.0674429, 0.622895, 5.77569e-07, 1)

[node name="BuyMenu" type="PanelContainer" groups=["buttons in shop"]]
offset_right = 1000.0
offset_bottom = 620.0
script = ExtResource("1_b2fvg")

[node name="Panel" type="Panel" parent="."]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_3jxc5")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="FarmTileVBox" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/FarmTileVBox"]
layout_mode = 2
text = "Farm Tile Plants"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FarmTileHBox" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/FarmTileVBox"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="VineTileVBox" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/VineTileVBox"]
layout_mode = 2
text = "Vine Tile Plants"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VineTileHBox" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/VineTileVBox"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="TreeTileVBox" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/TreeTileVBox"]
layout_mode = 2
text = "Tree Tile Plants"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TreeTileHBox" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/TreeTileVBox"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="WaterTileVBox" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/WaterTileVBox"]
layout_mode = 2
text = "Water Tile Plants"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WaterTileHBox" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/WaterTileVBox"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_r7l2m")
bus = &"SFX"
